# rusty-readability

./: .gitignore  Cargo.toml  README.md  openapi.json  wrangler.toml
.beads/: config.yaml  issues.jsonl
crates/readability-cli/: Cargo.toml
crates/readability-cli/src/: main.rs
crates/readability-core/: Cargo.toml  build.rs
crates/readability-core/benches/: readability_bench.rs
crates/readability-core/src/: analyze.rs  consensus.rs  difficulty.rs  interpretation.rs  lib.rs  options.rs  paragraphs.rs  stats.rs  warnings.rs
crates/readability-core/src/formulas/: ari.rs  coleman_liau.rs  dale_chall.rs  flesch.rs  flesch_kincaid.rs  gunning_fog.rs  mod.rs  smog.rs  spache.rs
crates/readability-core/src/preprocess/: detect.rs  html.rs  markdown_lite.rs  mod.rs  plain.rs
crates/readability-core/src/syllables/: cache.rs  exceptions.rs  mod.rs  rules.rs
crates/readability-core/src/tokenize/: abbreviations.rs  mod.rs  sentence.rs  word.rs
crates/readability-core/src/wordlists/: dale_chall.rs  mod.rs  spache.rs
crates/readability-core/tests/: formula_golden.rs  privacy.rs  property_tests.proptest-regressions  property_tests.rs  snapshot_tests.rs  syllable_accuracy.rs  tokenizer_edge_cases.rs
crates/readability-core/tests/snapshots/: snapshot_tests__academic_default.snap  snapshot_tests__academic_full.snap  snapshot_tests__children_default.snap  snapshot_tests__html_default.snap  snapshot_tests__markdown_default.snap  snapshot_tests__short_default.snap  snapshot_tests__simple_default.snap  snapshot_tests__simple_full.snap  snapshot_tests__simple_no_hash.snap  snapshot_tests__simple_no_stats.snap
crates/readability-types/: Cargo.toml
crates/readability-types/src/: errors.rs  lib.rs  options.rs  request.rs  response.rs
crates/readability-worker/: Cargo.toml
crates/readability-worker/src/: auth.rs  cors.rs  errors.rs  lib.rs  routes.rs
data/: dale_chall_easy_words.txt  spache_easy_words.txt  syllable_exceptions.tsv
data/licenses/: dale_chall.LICENSE  spache.LICENSE
fixtures/texts/: academic.txt  children.txt  html_input.html  long_5000w.txt  markdown_input.md  medium_500w.txt  simple.txt
prd/: readability-worker.md
tests/cross-library/: compare.py  comparison_report.csv
tests/worker-integration/: README.md  run.sh
