[workspace]
resolver = "2"
members = [
    "crates/readability-types",
    "crates/readability-core",
    "crates/readability-worker",
    "crates/readability-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/choostring/rusty-readability"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
