[package]
name = "readability-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for readability analysis, corpus management, and golden test generation"

[dependencies]
readability-types = { path = "../readability-types" }
readability-core = { path = "../readability-core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
csv = "1"
