[package]
name = "readability-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure Rust readability analysis engine with canonical formula implementations"

[dependencies]
readability-types = { path = "../readability-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
lru = "0.12"
regex-lite = "0.1"
phf = { version = "0.11", features = ["std"] }

[build-dependencies]
phf_codegen = "0.11"

[dev-dependencies]
approx = "0.5"
insta = { version = "1", features = ["json", "redactions"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "readability_bench"
harness = false
